<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/artboard___6"
    android:orientation="vertical"
    tools:context=".SignUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_black"
            android:paddingLeft="15sp"
            android:paddingTop="70sp"
            android:paddingBottom="30sp"
            android:text="@string/sign_up"
            android:textColor="@color/orange2"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/border_tx"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/nunito_black"
            android:hint="@string/name_input"
            android:inputType="text"
            android:outlineProvider="none"
            android:paddingLeft="10dp"
            android:textColorHint="@color/orange"
            android:textSize="20sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/border_tx"
            android:drawableLeft="@drawable/icons___navigation_icon__12_states_"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/nunito_black"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColorHint="@color/orange"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/border_tx"
            android:drawableLeft="@drawable/lock"
            android:drawableRight="@drawable/eye"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/nunito_black"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/orange"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/border_tx"
            android:drawableLeft="@drawable/lock"
            android:drawableRight="@drawable/eye"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/nunito_black"
            android:hint="@string/confirm_password_input"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/orange"
            android:textSize="20sp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/nunito_black"
            android:text="@string/sign_up_button"
            android:textColor="@color/orange2"
            android:textSize="25sp"
            app:strokeColor="@color/orange2" />

        <Button
            android:id="@+id/alreadyLogInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:background="@color/transparent_orange"
            android:fontFamily="@font/nunito_black"
            android:text="@string/already_log_in_button"
            android:textColor="@color/grey"
            android:textSize="23sp" />

    </LinearLayout>
</RelativeLayout>