<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".EditTagScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/backToWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/transparent_orange"
                app:icon="@drawable/baseline_arrow_back_ios_24"
                app:iconSize="35dp"
                app:iconTint="@color/orange" />

            <TextView
                android:id="@+id/tagText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_black"
                android:text="@string/tag_text"
                android:textColor="@color/orange"
                android:textSize="45sp" />

            <EditText
                android:id="@+id/newTagText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="@font/nunito_black"
                android:gravity="center"
                android:hint="@string/new_tag_text"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/opacity_orange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/schoolTagText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/baseline_remove_circle_24"
                android:drawableRight="@drawable/baseline_edit_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/nunito"
                android:text="@string/school_tag"
                android:textColor="@color/orange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/techTagText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/baseline_remove_circle_24"
                android:drawableRight="@drawable/baseline_edit_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/nunito"
                android:text="@string/tech_tag"
                android:textColor="@color/orange"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>